# ccnx-trace

./: .gitignore  ChangeLog  INSTALL  Makefile  README  config.h.in  configure.ac  trace_client.c  version.h
docs/: Manual
m4/: ax_ccnx.m4  ax_ndnx.m4
source/: .gitignore  Makefile  Makefile.am  Makefile.in  conf.h  config.h  config.h.in  configure  configure.ac  log.h  node_id.h  trace_client.c  trace_server.c  trace_server_new.c  version.h
